# -ukrllm-pipeline

./: .gitignore  README.md  REPORT.md  pyproject.toml  requirements.txt
configs/: config.local.yaml
dags/: pipeline.py
docker/: Dockerfile.airflow  docker-compose.yaml
outputs/: analysis_report.json  data_dump.csv
pipeline/: analyze.py  collect.py  load.py  quality.py  transform.py
scripts/: 001-run-pipeline-entrypoint.py
